--- a/src/components/widgets/Newsletter.astro
+++ b/src/components/widgets/Newsletter.astro
@@ -90,7 +90,7 @@ const {
 
     <!-- START - We recommend to place the below code where you want the form in your website html  -->
     <div class="sib-form" style="text-align: center;
-         background-color: transparent;                                 ">
+         background-color: #EFF2F7;                                 ">
       <div id="sib-form-container" class="sib-form-container">
         <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
           <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -98,7 +98,7 @@ const {
               <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z" />
             </svg>
             <span class="sib-form-message-panel__inner-text">
-                          Deine Anmeldung war nicht erfolgreich. Bitte versuche es noch einmal.
+                          Deine Anmeldung konnte nicht gespeichert werden. Bitte versuche es erneut.
                       </span>
           </div>
         </div>
@@ -109,24 +109,28 @@ const {
               <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
             </svg>
             <span class="sib-form-message-panel__inner-text">
-                          Deine Newsletter-Anmeldung war erfolgreich.
+                          Deine Anmeldung war erfolgreich.
                       </span>
           </div>
         </div>
         <div></div>
-        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:0px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-          <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAJx-y7Pc7txczZwNdUhNg_grnj_dMjKabUYQ4WW8HVt7CfaiXduEy2extGgNphST3_DbDnTDsyJekrZV-eu5so9NpId1WJQwoXd9KuYmSVNlxvbInXiiyEqcf2I7-pp6Qvycr4dgr86xLCgtM7eXYPJla-7lFBe1CziLDHi5n-53T46tRGDidItAMHloRWwkdoNA3LeOZRnK" data-type="subscription">
+        <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+          <form id="sib-form" method="POST" action="https://be734ac3.sibforms.com/serve/MUIFAMeMG37TWPPlGhoHTbK8aBTvsU5sFLf-zNjNtvPriItaJMFjuI8M37FszCiqPF2PFxb_QPuICmS7-9U-XniEtOwNRDl8XlaN7i1SEQnF16Pl2P-Iat6vQcadtLHIT0wj6ICHbJ5p9LpfUKgBiYGeWRenRDLw0ZDmJ4yjHhf15JN9IDtSPKzOe1iV2FSVfA8ObC5gUk76iSZE" data-type="subscription">
             <div style="padding: 8px 0;">
               <div class="sib-input sib-form-block">
                 <div class="form__entry entry_block">
                   <div class="form__label-row ">
+                    <label class="entry__label" style="font-weight: 700; text-align:left; font-size:16px; text-align:left; font-weight:700; font-family:Helvetica, sans-serif; color:#3c4858;" for="EMAIL" data-required="*">Gib deine E-Mail-Adresse ein, um dich anzumelden</label>
 
                     <div class="entry__field">
-                      <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="E-Mail" data-required="true" required />
+                      <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="Deine E-Mail Adresse" data-required="true" required />
                     </div>
                   </div>
 
                   <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+                  </label>
+                  <label class="entry__specification" style="font-size:12px; text-align:left; font-family:Helvetica, sans-serif; color:#8390A4; text-align:left">
+                    Gib bitte deine E-Mail-Adresse für die Anmeldung an, z. B. abc@xyz.com.
                   </label>
                 </div>
               </div>
@@ -140,13 +144,13 @@ const {
                         <input type="checkbox" class="input_replaced" value="1" id="OPT_IN" name="OPT_IN" />
                         <span class="checkbox checkbox_tick_positive"
                               style="margin-left:"
-                        ></span><span style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#3C4858; background-color:transparent;"><p>Hiermit willige ich ein, ab sofort den Newsletter von der-gitarrenbausatz.de zu abonnieren und stimme den <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank">Datenschutzrichtlinien</a> zu. Der Newsletter erscheint ca. einmal pro Monat.</p></span> </label>
+                        ></span><span style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#3C4858; background-color:transparent;"><p>Ich möchte deinen Newsletter erhalten und akzeptiere die Datenschutzerklärung.</p></span> </label>
                     </div>
                   </div>
                   <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
                   </label>
                   <label class="entry__specification" style="font-size:12px; text-align:left; font-family:Helvetica, sans-serif; color:#8390A4; text-align:left">
-                    Du kannst dich mit einem Link im Newsletter jederzeit abmelden.
+                    Du kannst den Newsletter jederzeit über den Link in unserem Newsletter abbestellen.
                   </label>
                 </div>
               </div>
@@ -166,26 +170,26 @@ const {
                   </svg>
                 </div>
                 <div style="font-size:14px; text-align:left; font-family:Helvetica, sans-serif; color:#687484; background-color:transparent;">
-                  <p>Wir nutzen Brevo als Marketingplattform. Durch das Absenden dieses Formulars stimmst du zu, dass deine persönliche Daten (deine E-Mail Adresse) an Brevo zur Weiterverarbeitung in Übereinstimmung mit deren <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank">Datenschutzerklärung</a> übermittelt wird.</p>
+                  <p>Wir verwenden Brevo als unsere Marketing-Plattform. Indem du das Formular absendest, erklärst du dich einverstanden, dass die von dir angegebenen persönlichen Informationen an Brevo zur Bearbeitung übertragen werden gemäß den <a href="https://www.brevo.com/de/legal/privacypolicy/" target="_blank">Datenschutzrichtlinien von Brevo.</a></p>
                 </div>
               </div>
             </div>
             <div style="padding: 8px 0;">
-              <div class="g-recaptcha" data-sitekey="6LfNALsqAAAAAHoGF3kiIEGY7s6WOrzvbIaBTLGe" data-callback="invisibleCaptchaCallback" data-size="invisible" onclick="executeCaptcha"></div>
+              <div class="g-recaptcha-v3" data-sitekey="6LfNALsqAAAAAHoGF3kiIEGY7s6WOrzvbIaBTLGe" style="display: none"></div>
             </div>
             <div style="padding: 8px 0;">
-              <div class="sib-form-block" style="text-align: center">
-                <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:Helvetica, sans-serif; color:#FFFFFF; background-color:#5a3313; border-radius:17px; border-width:0px;" form="sib-form" type="submit">
+              <div class="sib-form-block" style="text-align: left">
+                <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:left; font-weight:700; font-family:Helvetica, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:3px; border-width:0px;" form="sib-form" type="submit">
                   <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
                     <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z" />
                   </svg>
-                  Newsletter Abonnieren
+                  ANMELDEN
                 </button>
               </div>
             </div>
 
             <input type="text" name="email_address_check" value="" class="input--hidden">
-            <input type="hidden" name="locale" value="en">
+            <input type="hidden" name="locale" value="de">
           </form>
         </div>
       </div>
@@ -194,18 +198,21 @@ const {
 
     <!-- START - We recommend to place the below code in footer or bottom of your website html  -->
     <script>
-      window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
-      window.LOCALE = 'en';
-      window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "Die angegebenen Informationen sind ungültig. Bitte überprüfe deine Eingabe.";
+      window.REQUIRED_CODE_ERROR_MESSAGE = 'Wähle bitte einen Ländervorwahl aus.';
+      window.LOCALE = 'de';
+      window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "Die eingegebenen Informationen sind nicht gültig. Bitte überprüfe das Feldformat und versuche es erneut.";
 
       window.REQUIRED_ERROR_MESSAGE = "Dieses Feld darf nicht leer sein. ";
 
-      window.GENERIC_INVALID_MESSAGE = "Die angegebenen Informationen sind ungültig. Bitte überprüfe deine Eingabe.";
-      
+      window.GENERIC_INVALID_MESSAGE = "Die eingegebenen Informationen sind nicht gültig. Bitte überprüfe das Feldformat und versuche es erneut.";
+
+
+
+
       window.translation = {
         common: {
-          selectedList: '{quantity} list selected',
-          selectedLists: '{quantity} lists selected'
+          selectedList: '{quantity} Liste ausgewählt',
+          selectedLists: '{quantity} Listen ausgewählt'
         }
       };
 
@@ -220,4 +227,4 @@ const {
 
 <script is:inline defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
 
-<script is:inline src="https://www.google.com/recaptcha/api.js?hl=en"></script>
+<script is:inline src="https://www.google.com/recaptcha/api.js?render=6LfNALsqAAAAAHoGF3kiIEGY7s6WOrzvbIaBTLGe&hl=de" async defer></script>
