--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,8 +26,8 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-      Die Macher hinter der-gitarrenbausatz.de sind langjährige Gitarrenbauer und Musiker. Alle eint ein Ziel: den besten 
-      Gitarrenbausatz zu entwerfen, der es dir ermöglicht, deine Traumgitarre selbst zu bauen.
+      Die Macher hinter der-gitarrenbausatz.de sind langjährige Gitarrenbauer und Musiker. Unser Ziel ist es, den besten Gitarrenbausatz
+      anzubieten, mit dem du erfolgreich deine Traumgitarre selber bauen kannst.
     </Fragment>
   </Hero>
 
