--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,7 @@ import Content from '~/components/widgets/Content.astro';
 import Layout from '~/layouts/PageLayout.astro';
 
 import gitarreFoto1 from '../assets/images/gitarre-14.jpg';
+import fotoManolo from '../assets/images/manolo.jpeg';
 
 const metadata = {
   title: 'Über uns',
@@ -67,7 +68,7 @@ const metadata = {
   <Content
     isReversed
     image={{
-      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      src: fotoManolo,
       alt: 'Manolo Dill',
     }}
   >
